--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #ededed;
 }
 .header {
-    width: 50vw;
-    margin: auto;
-    text-align: center;
+  width: 50vw;
+  margin: 10px auto auto auto;
+  text-align: center;
+    font-size:25px;
 }
 #grid-container {
   display: grid;
   width: 500px;
   height: 500px;
-  margin: 10% auto 4% auto;
+  margin: 5% auto 4% auto;
 }
 .grid-item-border {
   border: 1px solid rgb(223, 223, 223);
@@ -54,16 +57,61 @@ span {
   cursor: pointer;
 }
 #toggleBtn {
+  background-color: rgb(51, 69, 236);
+}
+.btn {
   width: 200px;
   height: 40px;
   font-size: 25px;
   font-weight: bold;
   padding: 2px 4px 2px 4px;
-  background-color: rgb(51, 69, 236);
   color: rgb(247, 245, 245);
   cursor: pointer;
   border: none;
   border-radius: 7px;
 }
 #colorPicker {
+  border: none;
+  width: 160px;
+  height: 40px;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+}
+#rgbaBtn {
+  background-image: linear-gradient(
+    to right top,
+    #ff0000,
+    #f36400,
+    #dd9200,
+    #c1b700,
+    #9ed700,
+    #74df56,
+    #46e588,
+    #00e7b2,
+    #00cfdc,
+    #00b2ff,
+    #008bff,
+    #004eff
+  );
+}
+#hslBtn {
+  background: linear-gradient(
+    90deg,
+    #1f005c,
+    #8c00a0,
+    #e30084,
+    #ff2830,
+    #ffb56b
+  );
+}
+.options {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  width: 50vw;
+  margin: 2% auto auto auto;
 }
